# Funny_matrix

./: CMakeLists.txt  README.md  code.txt
.github/workflows/: ci.yml
dump/: dump.gv
frontend/: CMakeLists.txt
frontend/include/: bridge.hpp  common.hpp  dump_path_gen.hpp  expr_evaluator.hpp  lexem_tables.hpp  lexer.hpp  my_parser.hpp  node.hpp  parser.hpp  simulator.hpp  token.hpp
frontend/src/: expr_evaluator.cpp  graph_dump.cpp  lexer.l  main.cpp  parser.y  simulator.cpp
frontend/tests/: CMakeLists.txt  arithm.txt  program.txt  simple_pr.txt
frontend/tests/end_to_end/: check_program_termination.sh  input_in_condition.txt  input_in_expression.txt  tuple_assign.txt
frontend/tests/end_to_end/correct_program_tests/: 001.txt  arithm.txt  assign_in_expr.txt  bitwise_op.txt  fibbonachi.txt  nested_if_else.txt  vl_test.txt  while.txt  while_if.txt
frontend/tests/unit/: CMakeLists.txt
